src/objects/lightningbuddy__Actions__c.object
<CustomObject>
    <description>Object that captures actions to be taken when the usr hits a specific URL/type of page.</description>
    <fields>
        <fullName>lightningbuddy__Action_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action Text</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Enabled_Profiles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comma separated list of profiles that should have this action triggered.</inlineHelpText>
        <label>Enabled Profiles</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>lightningbuddy__File_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Image_Carousel_Config__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Image Carousel Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Lightning_Flow_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lightning Flow API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Page_Type__c</fullName>
        <label>Page Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Record Home</fullName>
                </value>
                <value>
                    <fullName>Chatter Group Detail</fullName>
                </value>
                <value>
                    <fullName>Dashboards Home</fullName>
                </value>
                <value>
                    <fullName>Record Detail</fullName>
                </value>
                <value>
                    <fullName>Reports Home</fullName>
                </value>
                <value>
                    <fullName>Task Detail From List</fullName>
                </value>
                <value>
                    <fullName>Task home</fullName>
                </value>
                <value>
                    <fullName>Record Update</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightningbuddy__Popover_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Popover Text</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Quick_Action_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quick Action API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Record_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Record_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Record_Update_Criteria__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Update Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Recurrence_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recurrence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Recurrence_Days__c</fullName>
        <label>Recurrence Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Recurrence__c</fullName>
        <label>Recurrence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days after certain date</fullName>
                </value>
                <value>
                    <fullName>Only once</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightningbuddy__Subtab_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subtab Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Toaster_Alert_Duration__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>Duration in seconds after which the alert will dismiss itself.</inlineHelpText>
        <label>Toaster Alert Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Toaster_Alert_Icon__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Icon displayed when type=&apos;other&apos;</inlineHelpText>
        <label>Toaster Alert Icon</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Toaster_Alert_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A message to display on the toaster alert action. Can also be a parameterized message.</inlineHelpText>
        <label>Toaster Alert Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Toaster_Alert_Mode__c</fullName>
        <label>Toaster Alert Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>dismissible</fullName>
                    <default>true</default>
                    <label>dismissible</label>
                </value>
                <value>
                    <fullName>sticky</fullName>
                </value>
                <value>
                    <fullName>pester</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightningbuddy__Toaster_Alert_Param_Config__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Toaster Alert Param Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Toaster_Alert_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Toaster Alert Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Toaster_Alert_Type__c</fullName>
        <label>Toaster Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>other</fullName>
                    <default>true</default>
                    <label>other</label>
                </value>
                <value>
                    <fullName>info</fullName>
                </value>
                <value>
                    <fullName>warning</fullName>
                </value>
                <value>
                    <fullName>success</fullName>
                </value>
                <value>
                    <fullName>error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightningbuddy__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rich Text</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Popover</fullName>
                </value>
                <value>
                    <fullName>Image Carousel</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Object Quick Action</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightningbuddy__Use_Custom_Criteria_Handler__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is the event that will get fired to delegate the record criteria evaluation for advanced use cases of criteria based actions.</inlineHelpText>
        <label>Use Custom Criteria Handler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Video_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Video_Type__c</fullName>
        <label>Video Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Youtube</fullName>
                </value>
                <value>
                    <fullName>Vimeo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightningbuddy__Welcome_Mat_Background_Image__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Welcome Mat Background Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Welcome_Mat_Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Welcome Mat Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Welcome_Mat_Main_Image__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Welcome Mat Main Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Welcome_Mat_Tile_Config__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Welcome Mat Tile Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Welcome_Mat_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Welcome Mat Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Actions</label>
    <listViews>
        <fullName>lightningbuddy__All</fullName>
        <columns>NAME</columns>
        <columns>lightningbuddy__Object__c</columns>
        <columns>lightningbuddy__Page_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Guideme Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>lightningbuddy__File</fullName>
        <active>true</active>
        <label>File</label>
    </recordTypes>
    <recordTypes>
        <fullName>lightningbuddy__Flow</fullName>
        <active>true</active>
        <label>Flow</label>
    </recordTypes>
    <recordTypes>
        <fullName>lightningbuddy__Image_Carousel</fullName>
        <active>true</active>
        <label>Image Carousel</label>
    </recordTypes>
    <recordTypes>
        <fullName>lightningbuddy__Object_Quick_Action</fullName>
        <active>true</active>
        <label>Object Quick Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>lightningbuddy__Popover</fullName>
        <active>true</active>
        <label>Popover</label>
    </recordTypes>
    <recordTypes>
        <fullName>lightningbuddy__Rich_Text</fullName>
        <active>true</active>
        <label>Rich Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>lightningbuddy__Toaster_Alert</fullName>
        <active>true</active>
        <label>Toaster Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>lightningbuddy__Video</fullName>
        <active>true</active>
        <label>Video</label>
    </recordTypes>
    <recordTypes>
        <fullName>lightningbuddy__Welcome_Mat</fullName>
        <active>true</active>
        <label>Welcome Mat</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>